<resources>

    <!-- Toolbar and Title Strings -->
    <string name="app_name">JourneyCoffee</string>
    <string name="action_settings">More About Journey</string>
    <string name="action_email">Email</string>
    <string name="action_order">Order</string>
    <string name="motto">People matter most</string>

    <!-- Email Intent Strings -->
    <string name="intent_email">mailto:coffee@journey.com</string>
    <string name="email_subject">Ask me anything!</string>
    <string name="email_tagline">Let us know how we can help.</string>

    <!-- Phone Call Intent Strings -->
    <string name="intent_phone_call">tel:7075802641</string>

    <!-- About Fragment Strings -->
    <string name="our_values">Our values - P.R.I.D.E.</string>
    <string name="people_product">people//product</string>
    <string name="respect">respect</string>
    <string name="determination">determination</string>
    <string name="environment">environment</string>
    <string name="mission_statement">Listen to our mission statement here</string>

    <!-- Font -->
    <string name="default_font" translatable="false">sans-serif-dark</string>
    <string name="intentionality">intentionality</string>


</resources>
